[package]
name = "pyxel"
version = "0.1.0"
authors = ["Alex Tennant <alex@adtennant.co.uk>"]
edition = "2018"
description = "Pyxel is a library for loading [PyxelEdit](https://pyxeledit.com) documents in Rust"
documentation = "https://docs.rs/pyxel"
homepage = "https://github.com/adtennant/pyxel"
repository = "https://github.com/adtennant/pyxel.git"
readme = "README.md"
keywords = ["pyxel", "pyxeledit"]
categories = ["multimedia::encoding", "multimedia::images"]
license = "MIT"

[dependencies]
derivative = "1.0.2"
hex = "0.3.2"
semver = { version = "0.9.0", features = ["serde"] }
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"
zip = { version = "0.5.1", default-features = false, features = ["deflate"] }

# Optional dependencies
image = { version = "0.21.0", default-features = false, features = ["png_codec"], optional = true }

[features]
default = []

# Automatically load the images within the Pyxel document using image
images = ["image"]

